--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,9 @@
 <resources>
     <string name="app_name">Septik</string>
     <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
     <string name="current_state_fragment_label">Septik</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="action_addEmptyDate">Vývoz</string>
+    <string name="action_addState">Stav</string>
     <string name="next_full_date">příští vývoz</string>
     <string name="in_days">za</string>
 </resources>
