--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="state_format">%.4fm³</string>
     <string name="state_percent_format">%d%%</string>
     <string name="days_to_full_format">%d dní</string>
+    <string name="state">State:</string>
 </resources>
